# deal-flow-agent

./: .gitignore  AUDIT_REPORT.md  README.md  WEB_SEARCH_FINDINGS_AND_RECOMMENDATIONS.md  WEB_SEARCH_RESULTS_SUMMARY.md  WEB_SEARCH_RESULTS_SUMMARY_COMPLETE.md  agent.py  bank_mandate_monitor.py  cache.py  check_rss_feeds.py  classifier.py  dedup.py  delete_recent_notes.py  investment_banks.py  keywords.py  merge_all_signals_comprehensive.py  merge_and_process_all_signals.py  pe_firm_monitor.py  pe_firm_output.csv  pe_firms.py  process_web_search_signals.py  pyproject.toml  requirements.txt  rss_monitor.py  rss_monitor_output.csv  rss_monitor_v2.py  sec_monitor.py  state.json  step1_approach_a_filtered.csv  step1_approach_a_final.csv  step1_approach_a_matched.csv  step1_approach_a_scope.csv  step1_approach_b_filtered.csv  step1_approach_b_final.csv  step1_approach_b_scope.csv  step1_broad_filtered_out.csv  step1_broad_matched.csv  step1_matched_articles.csv  target_accounts.py  targets.yml  (+13 more)
.github/workflows/: daily_scan.ym  daily_scan.yml  lookback.yml  scan.yml
src/carveout_monitor/: __init__.py  __main__.py  brief.py  classifier.py  feedback.py  feeds.py  fetcher.py  http_client.py  hubspot.py  models.py  notion.py  qualifier.py  scraper.py  state.py  tam_monitor.py  utils.py
tests/: __init__.py  test_classifier.py  test_dedup.py  test_feedback.py  test_feeds.py  test_fetcher.py  test_http_client.py  test_models.py  test_scraper.py  test_state.py  test_tam_monitor.py  test_utils.py
