[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carveout-monitor"
version = "1.0.0"
description = "Monitor PE firm websites for carve-out deal announcements"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.9.0",
    "PyYAML>=6.0.0",
    "python-docx>=1.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
headless = ["playwright>=1.40.0"]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
